crates/crochet/tests/errors/not_enough_args.crochet
let add = (a: number, b: number): number => a + b;
add();

let add = (a, b) => a + b;
add();
