crates/crochet/tests/errors/not_enough_args.error
Error: Not enough args provided
   ╭─[<unknown>:2:1]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·           ───────────────────┬───────────────────  
   ·                              ╰───────────────────── expected 2 args
 2 │ add();
   · ──┬──  
   ·   ╰──── was passed 0 args
───╯

Error: Not enough args provided
   ╭─[<unknown>:5:1]
   │
 4 │ let add = (a, b) => a + b;
   ·           ───────┬───────  
   ·                  ╰───────── expected 2 args
 5 │ add();
   · ──┬──  
   ·   ╰──── was passed 0 args
───╯
